--- a/index.html
+++ b/index.html
@@ -62,8 +62,8 @@ background: linear-gradient(135deg,
             <p>Lập kế hoạch học tập và sinh hoạt mỗi ngày.</p>
         </div>
      <div class="ccht-center">
-        <button class="ccht">Phần mềm cần thiết khi học</button>
-        <button class="ccht">Web hệ thống của trường</button></div>
+        <a href="phanmem.html" class="ccht">Phần mềm cần thiết khi học</a>
+        <a href="hethong.html" class="ccht">Web hệ thống của trường</a></div>
 
        <div class="section">
          <h2>Kết nối và đồng hành</h2></div>
